plugins {
    id 'org.springframework.boot' version '2.6.0'
    id 'java'
}

apply plugin: 'io.spring.dependency-management'

group = 'jp.co.who'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'
targetCompatibility = '17'
//sourceCompatibility = '16'
//targetCompatibility = '16'

configurations {
    developmentOnly
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    // spring
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-webflux'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

    // metrics
    runtimeOnly 'org.springframework.boot:spring-boot-starter-actuator'
    runtimeOnly 'io.micrometer:micrometer-registry-prometheus'

    // db
    runtimeOnly 'org.springframework.boot:spring-boot-starter-jdbc'
    runtimeOnly 'org.postgresql:postgresql'
    runtimeOnly 'com.h2database:h2:1.4.+'

    // aws s3
    implementation 'com.amazonaws:aws-java-sdk-s3:1.12.105'

    // auto reload for dev.
    developmentOnly 'org.springframework.boot:spring-boot-devtools'

    // validator
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.hibernate.validator:hibernate-validator'

    // lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // test
    testImplementation('org.springframework.boot:spring-boot-starter-test') {
        exclude(group: 'org.junit.vintage', module: 'junit-vintage-engine')
    }
    testImplementation 'org.springframework.security:spring-security-test'
    testImplementation 'org.assertj:assertj-core'
    testImplementation 'com.squareup.okhttp3:mockwebserver'

    // powermock
    testImplementation 'org.powermock:powermock-module-junit4:2.0.9'
    testImplementation 'org.powermock:powermock-api-mockito2:2.0.9'

    // mockito-inline(static mock)
    testImplementation 'org.junit.platform:junit-platform-launcher:1.8.1'
    testImplementation 'org.mockito:mockito-core:4.1.0'
    testImplementation 'org.mockito:mockito-inline:4.1.0'
    testImplementation 'org.mockito:mockito-junit-jupiter:4.1.0'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'

    // log
    implementation "ch.qos.logback:logback-classic:1.2.7"

    implementation 'mysql:mysql-connector-java:8.0.27'

    implementation 'com.google.guava:guava:31.0.1-jre'
}

dependencies {
    // spring
    implementation 'org.springframework.boot:spring-boot-starter-web'

    // lombok
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'

    // test
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.assertj:assertj-core'
}

test {
    // Junit5 を使う設定
    useJUnitPlatform()
}

tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}

tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}
